--- a/assets/css/portfolio-print.css
+++ b/assets/css/portfolio-print.css
@@ -196,6 +196,15 @@ bdo[dir=rtl]{
   unicode-bidi:bidi-override;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+  overflow-wrap:anywhere;
+}
+
 h1{
   font-family:"Montserrat", "HelveticaNeue", Helvetica, Arial, sans-serif;
   font-style:normal;
@@ -1863,6 +1872,7 @@ ol > li{
 }
 .header-case-study__project{
   margin-top:0;
+  overflow-wrap:anywhere;
 }
 .header-case-study__url{
   font-family:"Montserrat", "HelveticaNeue", Helvetica, Arial, sans-serif;
@@ -2139,7 +2149,7 @@ ol > li{
   width:100%;
   height:48px;
   padding:0 16px;
-  background:rgba(38, 38, 38, 0.6);
+  background:rgba(38, 38, 38, 0.7);
   color:#fff;
   font-family:"Libre Franklin", "Montserrat", "HelveticaNeue", Helvetica, Arial, sans-serif;
 }
@@ -2247,6 +2257,8 @@ ol > li{
   line-height:1.5rem;
   color:#454958;
   margin-bottom:0.75rem;
+  display:inline-block;
+  padding:4px 0;
   color:#262626;
   text-decoration:none;
 }
@@ -2770,6 +2782,20 @@ ol > li{
   unicode-bidi:bidi-override;
 }
 .l-resume h1,
+.l-resume h2,
+.l-resume h3,
+.l-resume h4,
+.l-resume h5,
+.l-resume h6,
+.l-federal-resume h1,
+.l-federal-resume h2,
+.l-federal-resume h3,
+.l-federal-resume h4,
+.l-federal-resume h5,
+.l-federal-resume h6{
+  overflow-wrap:anywhere;
+}
+.l-resume h1,
 .l-federal-resume h1{
   font-family:"Montserrat", "HelveticaNeue", Helvetica, Arial, sans-serif;
   font-style:normal;
@@ -2999,14 +3025,30 @@ ol > li{
   font-family:Roboto, sans-serif;
   font-weight:300;
 }
+.l-resume .job__meta,
+.l-federal-resume .job__meta{
+  font-family:"Montserrat", "HelveticaNeue", Helvetica, Arial, sans-serif;
+  font-style:normal;
+  font-weight:normal;
+  padding:0;
+  color:#333333;
+  font-family:"Montserrat", "HelveticaNeue", Helvetica, Arial, sans-serif;
+  font-size:14px;
+  font-size:0.875rem;
+  line-height:18px;
+  line-height:1.125rem;
+  margin:1.25rem 0 0.5rem;
+}
 .l-resume h2,
 .l-resume h3,
 .l-resume h4,
 .l-resume h5,
+.l-resume .job__meta,
 .l-federal-resume h2,
 .l-federal-resume h3,
 .l-federal-resume h4,
-.l-federal-resume h5{
+.l-federal-resume h5,
+.l-federal-resume .job__meta{
   margin:0;
 }
 .l-resume h4,
@@ -3014,7 +3056,9 @@ ol > li{
   line-height:1.3rem;
 }
 .l-resume h5,
-.l-federal-resume h5{
+.l-resume .job__meta,
+.l-federal-resume h5,
+.l-federal-resume .job__meta{
   margin-bottom:0;
   line-height:1.2rem;
 }
@@ -3117,8 +3161,10 @@ ol > li{
 }
 .l-resume .job h4,
 .l-resume .job h5,
+.l-resume .job .job__meta,
 .l-federal-resume .job h4,
-.l-federal-resume .job h5{
+.l-federal-resume .job h5,
+.l-federal-resume .job .job__meta{
   font-family:Roboto, sans-serif;
   font-weight:300;
 }
